Fixed weather display on mobile

--- a/client/avatar/avatar.less
+++ b/client/avatar/avatar.less
@@ -1,4 +1,6 @@
 .avatar-container {
+  height: 100%;
+
   #avatar {
     background: url("/main_avatar.png") no-repeat;
     width: 205px;
@@ -11,5 +13,16 @@
     position: absolute;
     height: 100%;
     width: 205px;
+  }
+
+  .weatherInfo {
+    position: absolute;
+    left: 75%;
+    width: 55%;
+  }
+
+  .centerSpinner {
+    margin: 0 auto;
+    width: 0;
   }
 }
