--- a/client/profiles/profiles.less
+++ b/client/profiles/profiles.less
@@ -7,11 +7,6 @@
     padding: 0 15px;
   }
 
-  .weatherInfo {
-    position: absolute;
-    left: 47%;
-  }
-
   .shiver {
     -webkit-animation-name: shiver;
     -webkit-animation-duration: .2s;
