--- a/client/w2w.less
+++ b/client/w2w.less
@@ -23,9 +23,3 @@ button:focus {
   background: none;
   border: none;
 }
-
-.centerSpinner {
-  margin: 0 auto;
-  width: 0;
-}
-
